--- a/practice/app/globals.css
+++ b/practice/app/globals.css
@@ -24,3 +24,65 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+@import "tailwindcss";
+
+.container {
+  max-width: 1320px;
+  margin: 0 auto;
+  padding: 0 10px;
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.col-3 {
+  width: 25%;
+  padding: 0 10px;
+}
+
+.col-4 {
+  width: 33.33%;
+  padding: 0 10px;
+}
+
+.col-6 {
+  width: 50%;
+  padding: 0 10px;
+}
+
+.col-8 {
+  width: 66.66%;
+  padding: 0 10px;
+}
+
+.col-12 {
+  width: 100%;
+  padding: 0 10px;
+}
+
+@media (max-width: 1200px) {
+  .container {
+    max-width: 1140px;
+  }
+}
+
+@media (max-width: 992px) {
+  .container {
+    max-width: 960px;
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    max-width: 720px;
+  }
+}
+
+@media (max-width: 576px) {
+  .container {
+    max-width: 100%;
+  }
+}
